fixed gap above navbar

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -20,7 +20,7 @@
 
 .NavBar {
     overflow: hidden;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
     
